--- a/_posts/2019-11-05-Java.md
+++ b/_posts/2019-11-05-Java.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      Docker Commands By Mu
-subtitle:   docker reviewer
+title:      Java Generic By Mu
+subtitle:   notes
 date:       2019-09-29
 author:     SHR
 header-img: 
