--- a/_posts/2019-11-20-RMI-Error.md
+++ b/_posts/2019-11-20-RMI-Error.md
@@ -14,7 +14,8 @@ tags:
 
 
 - java.rmi.ConnectException
-Server exception: java.rmi.ConnectException: Connection refused to host: 10.0.75.1; *nested exception is: 
+
+*Server exception: java.rmi.ConnectException: Connection refused to host: 10.0.75.1; nested exception is: 
 	java.net.ConnectException: Connection refused: connect
 java.rmi.ConnectException: Connection refused to host: 10.0.75.1; nested exception is: 
 	java.net.ConnectException: Connection refused: connect
@@ -47,6 +48,7 @@ Caused by: java.net.ConnectException: Connection refused: connect
 ---
 
 - java.rmi.UnmarshalException
+
 *Server exception: java.rmi.ServerException: RemoteException occurred in server thread; nested exception is: 
 	java.rmi.UnmarshalException: error unmarshalling arguments; nested exception is: 
 	java.lang.ClassNotFoundException: IFlightServer
